<resources>
    <string name="app_name">RPG Backpack</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="dummy">Dummy</string>
    <string name="dummy_number">5</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="app_title">RPG Backpack</string>
    <string name="email_label">E-mail</string>
    <string name="password_label">Password</string>
    <string name="login_label">Login</string>
    <string name="sign_up_label">Sign Up</string>
    <string name="forgot_password_label"><u>Forgot Password</u></string>
    <string name="username_label">Username</string>
    <string name="email_verified">E-mail verified</string>
    <string name="email_unverified">E-mail not verified</string>
    <string name="create_session">Create session</string>
    <string name="join_session">Join session</string>
    <string name="logout">Logout</string>
    <string name="buy_subscription">Buy subscription</string>
    <string name="name">Name</string>
    <string name="create">Create</string>
    <string name="players">Players</string>
    <string name="title_activity_join_session">JoinSessionActivity</string>
    <string name="session_id">Session ID</string>
    <string name="join">Join</string>
    <string name="username">Username</string>
    <string name="kick">Kick</string>
    <string name="inspect">Inspect</string>
    <string name="edit">Edit</string>
    <string name="leave">Leave</string>
</resources>