<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/activity_login_image_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_64sdp"
        android:drawablePadding="@dimen/_6sdp"
        android:text="@string/app_title"
        android:textSize="@dimen/_30sdp"
        app:drawableTopCompat="@drawable/backpack_128px"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/activity_login_email_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_32sdp"
        android:layout_marginTop="@dimen/_24sdp"
        android:drawableStart="@drawable/ic_baseline_person_24"
        android:drawablePadding="@dimen/_4sdp"
        android:hint="@string/email_label"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/activity_login_password_field"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_login_image_textview" />

    <EditText
        android:id="@+id/activity_login_password_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_32sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:drawablePadding="@dimen/_4sdp"
        android:hint="@string/password_label"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_login_email_field" />

    <Button
        android:id="@+id/activity_login_login_button"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_24sdp"
        android:paddingHorizontal="@dimen/_20sdp"
        android:paddingVertical="@dimen/_6sdp"
        android:text="@string/login_label"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintEnd_toStartOf="@+id/activity_login_signup_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_login_password_field" />

    <Button
        android:id="@+id/activity_login_signup_button"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_24sdp"
        android:paddingHorizontal="@dimen/_20sdp"
        android:paddingVertical="@dimen/_6sdp"
        android:text="@string/sign_up_label"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/activity_login_login_button"
        app:layout_constraintTop_toBottomOf="@+id/activity_login_password_field" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_46sdp"
        android:text="@string/forgot_password_label"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>