<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_create_master_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.CreateSessionActivity">

    <TextView
        android:id="@+id/activity_create_session_image_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_132sdp"
        android:drawablePadding="@dimen/_6sdp"
        android:text="@string/create_session"
        android:textSize="@dimen/_30sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/activity_create_session_loading_spinner"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="gone">
    </ProgressBar>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/activity_create_session_name_field_text_input_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_32sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:hint="@string/name"
        app:errorEnabled="true"
        app:layout_constraintBottom_toTopOf="@+id/activity_create_session_password_field_text_input_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_create_session_image_textview"
        app:startIconDrawable="@drawable/ic_baseline_person_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/activity_create_session_name_field_edit_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:importantForAutofill="no"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/activity_create_session_password_field_text_input_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_32sdp"
        android:hint="@string/password_label"
        app:errorEnabled="true"
        app:passwordToggleEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_create_session_name_field_text_input_layout"
        app:startIconDrawable="@drawable/ic_baseline_lock_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/activity_create_session_password_field_edit_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:importantForAutofill="no"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/activity_create_session_create_button"
        android:layout_width="@dimen/_250sdp"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/_20sdp"
        android:paddingVertical="@dimen/_6sdp"
        android:text="@string/create"
        android:textSize="@dimen/_12sdp"
        android:backgroundTint="@color/green_3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_create_session_password_field_text_input_layout" />

</androidx.constraintlayout.widget.ConstraintLayout>