<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/item_character_card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="@dimen/_8sdp"
    android:layout_marginVertical="@dimen/_12sdp"
    android:elevation="@dimen/_8sdp"
    app:cardCornerRadius="@dimen/_12sdp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/item_character_avatar_border"
            android:layout_width="@dimen/_53sdp"
            android:layout_height="@dimen/_53sdp"
            android:layout_marginVertical="@dimen/_8sdp"
            android:layout_marginStart="@dimen/_10sdp"
            app:cardBackgroundColor="@color/green_3"
            app:cardCornerRadius="250dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/item_character_avatar_cardView"
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_50sdp"
                android:layout_gravity="center"
                app:cardCornerRadius="250dp">

                <ImageView
                    android:id="@+id/item_character_avatar_imageView"
                    android:layout_width="@dimen/_50sdp"
                    android:layout_height="@dimen/_50sdp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_baseline_person_24" />
            </androidx.cardview.widget.CardView>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/item_character_name_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_toEndOf="@+id/item_character_avatar_border"
            android:text="@string/username"
            android:textSize="25sp" />

        <LinearLayout
            android:id="@+id/item_character_buttons_menu_game_master"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/item_character_avatar_border"
            android:orientation="horizontal"
            android:weightSum="1"
            android:background="@color/green_2">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/item_character_kick_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/kick"
                app:cornerRadius="0dp"
                android:background="@color/green_2"
                android:elevation="0dp"/>

            <View
                android:layout_width="@dimen/_2sdp"
                android:layout_height="match_parent"
                android:background="@color/green_3" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/item_character_inspect_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/inspect"
                app:cornerRadius="0dp"
                android:elevation="0dp"
                android:background="@color/green_2"/>
        </LinearLayout>
    </RelativeLayout>
</androidx.cardview.widget.CardView>