<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1"
    tools:context=".views.MainActivity">

    <RelativeLayout
        android:id="@+id/activity_main_header"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.12"
        android:background="@color/green_2"
        android:elevation="8dp"
        android:gravity="center_vertical">

        <androidx.cardview.widget.CardView
            android:id="@+id/activity_main_avatar_border"
            android:layout_width="@dimen/_53sdp"
            android:layout_height="@dimen/_53sdp"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_8sdp"
            app:cardBackgroundColor="@color/green_3"
            app:cardCornerRadius="250dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/activity_main_avatar_cardView"
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_50sdp"
                android:layout_gravity="center"
                app:cardCornerRadius="250dp">

                <ImageView
                    android:id="@+id/activity_main_avatar_imageView"
                    android:layout_width="@dimen/_50sdp"
                    android:layout_height="@dimen/_50sdp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_baseline_person_24" />
            </androidx.cardview.widget.CardView>
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_toEndOf="@+id/activity_main_avatar_border"
            android:orientation="vertical">

            <TextView
                android:id="@+id/activity_main_user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="@dimen/_4sdp"
                android:text="Username_14cha"
                android:textSize="25sp"
                app:drawableEndCompat="@drawable/crown24" />

            <TextView
                android:id="@+id/activity_main_email_confirmation_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_1sdp"
                android:text="E-mail not verified"
                android:textSize="@dimen/_10sdp" />

        </LinearLayout>

        <TextView
            android:id="@+id/activity_main_sessions_count"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:background="@color/green_3"
            android:elevation="8dp"
            android:gravity="center"
            android:text="0"
            android:textSize="@dimen/_24sdp" />

        <View
            android:layout_width="@dimen/_4sdp"
            android:layout_height="match_parent"
            android:background="@color/green_3"
            android:elevation="8dp" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_4sdp"
        android:background="@color/green_3"
        android:elevation="8dp" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.88">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/activity_main_body_sessions_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_marginEnd="@dimen/_6sdp"
            android:layout_marginBottom="@dimen/_6sdp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                android:id="@+id/activity_main_action_button_logout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|bottom"
                android:layout_margin="@dimen/_5sdp"
                android:text="@string/logout"
                android:visibility="gone"
                app:icon="@drawable/ic_logout" />

            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                android:id="@+id/activity_main_action_button_subscription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|bottom"
                android:layout_margin="@dimen/_5sdp"
                android:text="@string/buy_subscription"
                android:visibility="gone"
                app:icon="@drawable/ic_dollar" />

            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                android:id="@+id/activity_main_action_button_create"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|bottom"
                android:layout_margin="@dimen/_5sdp"
                android:text="@string/create_session"
                android:visibility="gone"
                app:icon="@drawable/ic_add" />


            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                android:id="@+id/activity_main_action_button_join"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|bottom"
                android:layout_margin="@dimen/_5sdp"
                android:text="@string/join_session"
                android:visibility="gone"
                app:icon="@drawable/ic_key" />


            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                android:id="@+id/activity_main_action_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|bottom"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                app:icon="@drawable/ic_arrow_up" />
        </LinearLayout>
    </FrameLayout>

    <!--    <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/activity_main_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="0dp"
            android:background="?android:attr/windowBackground"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:menu="@menu/bottom_nav_menu"
            android:elevation="8dp"/>-->

</LinearLayout>